Fix wrap issue with list actions

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,7 @@ a {
   color: black;
   text-decoration: none;
   background-color: transparent;
+  text-align: center;
 
   &:hover {
     text-decoration: underline;
@@ -116,6 +117,7 @@ li {
 
 .list-email-button {
   cursor: pointer;
+  white-space: normal;
 }
 
 .list-email-confirmation {
